# data_wellness_hackathon

./: README.md  pyproject.toml
data_wellness_hackathon/: config.py  embeddings.py  log_init.py  main.py  persistence.py  text_splitter.py
